--- a/templates/profile.html
+++ b/templates/profile.html
@@ -18,7 +18,7 @@
         		{{ item.product.name }}
       		{% endfor %}
       	  </td>
-          <td>R{{ order.get_cart_total }}</td>
+          <td>${{ order.get_cart_total }}</td>
 
         </tr>
       {% empty %}
